kubernetes/certified-kubernetes-administrator-with-practice-tests/daemon-set-definition.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: monitoring-daemon
spec:
  selector:
    matchLabels:
      app: monitoreing-agent
    template:
      metadata:
        labels:
          app: monitoreing-agent
      spec:
        containers:
          - name: monitoreing-agent
            image: monitoreing-agent
