kubernetes/certified-kubernetes-administrator-with-practice-tests/daemon-set_en_namespace.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: elasticsearch
  namespace: kube-system

spec:
  selector:
    matchLabels:
      app: log
  template:
    metadata:
      labels:
        app: log
    spec:
      containers:
        - name: elasticsearch-pod
          image: k8s.gcr.io/fluentd-elasticsearch:1.20
