kubernetes/certified-kubernetes-administrator-with-practice-tests/parametros.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-green

spec:
  containers:
    - name: webapp
      image: kodekloud/webapp-color
      args: ["--color", "green"]
