kubernetes/certified-kubernetes-administrator-with-practice-tests/service-definition_clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end

spec:
  type: ClusterIP # default
  ports:
    - targetPort: 80    # puerto del back-end
      port: 80          # puerto del service
